Fix char limit layout issue

--- a/static/css/tc.gam.admin.css
+++ b/static/css/tc.gam.admin.css
@@ -998,6 +998,10 @@ ul.adminbar li.active a {
 
 /* "QUESTIONS" CMS page  */
 
+.continent.cms-questions #questions div.add-questions-main div.bd {
+	text-align: right;
+}
+
 .continent.cms-questions #questions table.active-questions-table {
 	margin-bottom: 50px;
 }
@@ -1049,8 +1053,9 @@ ul.adminbar li.active a {
 }
 
 .continent.cms-questions #questions .add-questions-main .charlimit {
-	float: right;
-	margin-right: 2px;
+	margin: 5px 2px 5px 0;
+	display: block;
+	float: none;
 }
 
 .continent.cms-questions #questions .add-questions-main .rounded-button {
